@@ -37,7 +37,7 @@ for further details about configuration options.
 No known bugs at the time of this writing.
 .SH LICENSE
 .EX
-Copyright (C) 2011  Daniel Adolfsson <daniel.adolfsson@tuhox.com>
+Copyright (C) 2011  Daniel Adolfsson <daniel@priv.nu>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -53,7 +53,7 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .EE
 .SH AUTHOR
-Daniel Adolfsson <daniel.adolfsson@tuhox.com>
+Daniel Adolfsson <daniel@priv.nu>
 .SH "SEE ALSO"
 .BR ndppd.conf(5)
 
