@@ -74,6 +74,6 @@ if the rule matches, without querying an interface. It's recommended
 that you set this value to avoid sending responses for IPs that does
 not exist.
 .SH AUTHOR
-Daniel Adolfsson <daniel.adolfsson@tuhox.com>
+Daniel Adolfsson <daniel@priv.nu>
 .SH "SEE ALSO"
 .BR ndppd(1)
