@@ -1,3 +1,7 @@
+2012-01-26  Daniel Adolfsson  <daniel@priv.nu>
+
+   * Author changed e-mail address; updated copyright info.
+
 2011-10-11  Daniel Adolfsson  <daniel.adolfsson@tuhox.com>
 
    * Initial Release; 0.2.1
